added improvements for running cratedb inside container
* enabled `-XX:+UseCGroupMemoryLimitForHeap` java option
* set `-Des.cgroups.hierarchy.override=/`