@@ -1,6 +1,8 @@
 #!/bin/sh
 
-set -e
+set -ae
+
+CRATE_JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Des.cgroups.hierarchy.override=/ $CRATE_JAVA_OPTS"
 
 if [ "${1:0:1}" = '-' ]; then
     set -- crate "$@"
